<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrizeWord</string>
    <string name="app_release_month">7</string>
    <string name="app_release_year">2013</string>
    <string name="action_settings">Settings</string>


    // ==== fragment titles ====
    <string name="login_fragment_title">Login</string>
    <string name="vk_login_fragment_title">Vk login</string>
    <string name="fb_login_fragment_title">Facebook login</string>
    <string name="crosswords_fragment_title">Сканворды</string>
    <string name="authorization_fragment_title">Вход</string>
    <string name="resetpass_fragment_title">Восстановление пароля</string>
    <string name="forgetpass_fragment_title">Забыли пароль?</string>
    <string name="registration_fragment_title">Регистрация</string>
    <string name="rules_fragment_title">Правила</string>
    <string name="invite_fragment_title">Пригласить друзей</string>
    <string name="rating_fragment_title">Рейтинг</string>
    <string name="score_fragment_title">Детализация очков</string>
    <string name="splashscreen_fragment_title">Заставка</string>

    <string name="donwload">Скачать</string>
    <string name="ending">-й</string>
    <string name="points">" очков"</string>
    <string name="user">Пользователь</string>
    <string name="error">Ошибка</string>
    <string name="error_merge_accounts">Ошибка! Этот аккаунт уже привязан к другой учетной записи</string>
    <string name="puzzless_rest_scope_days">7</string>
    <string name="puzzless_hint_hints">Подсказки</string>
    <string name="puzzless_hint_rest_abr">Ост.</string>
    <string name="puzzless_hint_crosswords_on">Сканворды за</string>
    <string name="puzzless_hint_archives">Архив</string>
    <string name="puzzless_hint_hints_rest">Осталось:</string>
    <string name="puzzless_hint_crosswords">сканвордов</string>
    <string name="puzzless_hint_minimal">минимум</string>
    <string name="puzzless_hint_resolved">Разгадано</string>
    <string name="puzzless_hint_get_score">Набрано</string>
    <string name="puzzless_hint_brilliant_crossword">Бриллиантовый</string>
    <string name="puzzless_hint_gold_crossword">Золотой</string>
    <string name="puzzless_hint_silver_crossword">Серебряный</string>
    <string name="puzzless_hint_silver2_crossword">2-й Серебряный</string>
    <string name="puzzless_hint_free_crossword">Бесплатный</string>
    <string name="puzzless_hint_actionbar_title">Сканворды</string>
    <string name="in_rating">в рейтинге</string>
    <string name="not_found_camera">Ошибка. На устройстве отсутствует фронтальная камера.</string>
    <string name="personal_record">Персональный рекорд:</string>
    <string name="choice_source">Выберите источник</string>
    <string name="camera">Камера</string>
    <string name="gallery"> Галерея</string>
    <string name="login_enter_error_msg">Логин или пароль набраны неверно. Пожалуйста попробуйте еще раз.</string>
    <string name="ok_bnt_title">OK</string>
    <string name="register_screen_name">Имя*</string>
    <string name="register_screen_surname">Фамилия*</string>
    <string name="register_screen_email">E-mail*</string>
    <string name="register_screen_pass">Пароль*</string>
    <string name="register_screen_retry_pass">Повторите\nпароль</string>
    <string name="register_screen_date_born">Дата\nрождения</string>
    <string name="register_screen_city">Город</string>
    <string name="register_screen_error_empty_msg">Регистрационные данные набраны неверно. Пожалуйста попробуйте еще
        раз.</string>
    <string name="register_screen_error_pass_msg">Пароли не совпадают. Пожалуйста проверьте введенные данные.</string>
    <string name="register_screen_date_pick_dialog_title">Дата рождения</string>
    <string name="buy_one_dollar">$0.99</string>
    <string name="buy_two_dollar">$1.99</string>
    <string name="buy_three_dollar">$2.99</string>
    <string name="buy_free">Скачать</string>


    <string name="menu_main_my_crosswords">Мои сканворды</string>
    <string name="menu_main_invite_friends">Пригласить друзей</string>
    <string name="menu_main_vkontakte">ВКонтакте</string>
    <string name="menu_main_facebook">Facebook</string>
    <string name="menu_main_nootifyers">Уведомления</string>
    <string name="menu_main_rules">Правила</string>
    <string name="menu_main_restore_shoping">Восстановить покупки</string>
    <string name="menu_main_logout">Сменить пользователя</string>


    <string name="title_activity_one_crossword">Crossword</string>
    <string name="title_activity_vk">Vkontakte</string>
    <string name="title_activity_fb">Facebook</string>

    <string name="VK_API_ID">3392295"</string>
    <string name="FB_API_ID">390010757745933"</string>


    <string name="login_screen_pass_hint">Password</string>
    <string name="login_screen_email_hint">E-mail</string>

    // ==== toast messages ====
    <string name="msg_no_internet">Нет интернет соединения</string>
    <string name="msg_unknown_error">Неизвестная ошибка</string>
    <string name="msg_register_email_exists">Почтовый адрес уже зарегистрирован</string>
    <string name="msg_password_changed">Пароль изменен</string>
    <string name="msg_password_empty">Пароль пустой</string>
    <string name="msg_password_token_not_found">Токен не найден или уже использован</string>
    <string name="msg_forget_password_error_email">Электронный адрес не зарегистрирован</string>
    <string name="question_restore_purchases_title">Вопрос</string>
    <string name="question_restore_purchases_msg">Восстановить покупки?</string>

    <string name="manage_purshase_already_owned">Покупка сета уже была совершена c данного устройства под другим пользователем</string>

    // ==== Rules messages ====
    <string name="rules_text_1">Разгадывайте и участвуйте в рейтинге! Каждый месяц лидеры рейтинга
    получают денежный приз! Все подробности на сайте www.prize-word.com</string>
    <string name="rules_text_2">Чтобы разгадать сканворд, нажмите на иконку в меню "Мои сканворды".</string>
    <string name="rules_text_3">Нажатие на клетку с вопросом выделит слово. Вписывайте буквы с помощью клавиатуры.</string>
    <string name="rules_text_4">Регулируйте размер поля.</string>
    <string name="rules_text_5">Правильное слово будет выделено фоном и звуковым сигналом. Если
        слово набрано неверно, клетка с вопросом будет выделена красным цветом. Буквы в пересечениях набирать не нужно.</string>
    <string name="rules_text_6">В главном меню вы видите все сканворды месяца. Бриллиантовые сканворды самые сложные, но они
        приносят больше всего баллов - минимум 8 999 за каждый!</string>
    <string name="rules_text_7">Золотые сканворды - принесут е меньше 5 999 за каждый. Серебряные
        - не меньше 3 999 за один разгаданный сканворд.</string>
    <string name="rules_text_8">Бесплатные сканворды баллов не дают! Далее расположены пакеты Подсказок. Одна подсказака - одно
        выбранное слово, которое будет вписано автоматически.</string>
    <string name="rules_text_9">Разгадайте сканворд быстрее, чем за 15 минут и получите дополнительные баллы! Нажав на Паузу слева, вы приостановите
        разгадывание и отсчет времени.</string>
    <string name="rules_text_10">Нажатие на кнопку Меню покажет ваш текущий рейтинг, лучшый результат месяца и позволит пригласить в игру друзей.
        Каждый скачавший игру друг принесет вам дополнительные баллы!</string>
    <string name="rules_text_11">Рейтинг - это сумма баллов, набранных за месяц. Он фиксируется первого числа каждого месяца в момент появления новых сканвордов. Лидеры рейтинга получают денежный приз! В новом месяце - новый рейтинг!</string>
    <string name="rules_text_12">PrizeWord - увлекательно, полезно и выгодно!</string>

    // ==== Menu_group text ====
    <string name="menu_group_result_in_month">"Ваш результат в "</string>
    <string name="menu_group_social">Социальные сети</string>
    // ==== News_group text ====
    <string name="news1">Возможности поведать рассказом собеседника в бега равна нулю</string>
    <string name="news2">Совокупность методов разбора слов на слоги равна нулю</string>
    <string name="news3">Результаты попадания в цель при заходе на посадку несогласованны</string>
    <string name="news4">Жизненная позиция человечества в целом убога</string>
    <string name="news5">Жители нашей планеты не могут следовать простым правилам поведения в обществе</string>

    <string-array name="menu_group_months_at_predlog_padezh">
        <item>январе</item>
        <item>феврале</item>
        <item>марте</item>
        <item>апреле</item>
        <item>мае</item>
        <item>июне</item>
        <item>июле</item>
        <item>августе</item>
        <item>сентябре</item>
        <item>октябре</item>
        <item>ноябре</item>
        <item>декабре</item>
    </string-array>

    <string-array name="menu_group_months_at_imenit_padezh">
        <item>январь</item>
        <item>февраль</item>
        <item>март</item>
        <item>апрель</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>август</item>
        <item>сентябрь</item>
        <item>октябрь</item>
        <item>ноябрь</item>
        <item>декабрь</item>
    </string-array>

    <string-array name="puzzless_hint_rest_days">
        <item>день</item>
        <item>дня</item>
        <item>дней</item>
    </string-array>


    // ==== GameField text ====
    <string name="gamefield_percent">% решено</string>
    <string name="gamefield_sound">Звуки</string>
    <string name="gamefield_music">Музыка</string>
    <string name="gamefield_pause">Пауза</string>
    <string name="gamefield_hint_dialog_title">Подсказка</string>
    <string name="gamefield_hint_dialog_message">Вы действительно хотите воспользоваться подсказкой?</string>
    <string name="gamefield_hint_no_message">У вас закончились подсказки! Желаете ли приобрести 10 подсказок?</string>
    <string name="gamefield_hint_dialog_ok">Да</string>
    <string name="gamefield_hint_dialog_cancel">Нет</string>

    <string-array name="gamefild_score_type">
        <item>очков</item>
        <item>очко</item>
        <item>очка</item>
    </string-array>

    // ==== ScoreFragment text ====
    <string name="score_resolved">разгадано</string>
    <string name="score_fragment_title1"> в </string>
    <string name="score_fragment_header_text">Очки</string>
    <string name="score_friends_list">Приглашено</string>
    <string name="score_friends_count">друзей</string>
    <string-array name="friends_name_from_count">
        <item>друг</item>
        <item>друга</item>
        <item>друзей</item>
    </string-array>

    // ==== InviteFragment text ====
    <string name="invite_message_text">Чтобы приглашать друзей и получать за это дополнительные очки, добавьте социальные сети в меню приложения</string>
    <string name="invite_message_fb_text">Приглашаю тебя поиграть в PrizeWord – увлекательную и полезную игру! Разгадывай сканворды, участвуй в рейтинге, побеждай!</string>

    // ==== Share message ====
    <string name="social_puzzle_share_message" formatted="false">Я только что разгадал сканворд %1s за %2s минут и получил за это %3s очков!</string>
    <string name="facebook_app_id">390010757745933</string>
    <string name="facebook_app_error">Операция невозможна. Установите приложение Facebook.</string>
    <string name="vk_app_error">Операция невозможна. Подключите аккаунт Vkontakte к
        PrizeWord.</string>
    <string name="vk_app_ok">Запись размещена.</string>
    <string name="cancel_message_button">Отмена</string>
</resources>
