<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/menu_header_bg"
            android:gravity="center">

        <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="4dp">

            <ImageView
                    android:id="@+id/header_listview_photo_img"
                    android:layout_width="@dimen/size_avatar"
                    android:layout_height="@dimen/size_avatar"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:background="@drawable/login_register_ava_but"/>

            <ImageView
                    android:layout_width="@dimen/size_avatar"
                    android:layout_height="@dimen/size_avatar"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:background="@drawable/login_register_ava_frame"/>
        </FrameLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/header_listview_nickname_tview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/user"
                    android:textColor="@color/header_text_color"
                    />

            <TextView
                    android:id="@+id/header_listview_personal_record_tview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/personal_record"
                    android:textColor="@color/header_text_color"
                    />

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/header_listview_points_tview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:clickable="false"
                        android:text="0"
                        android:textColor="@color/header_text_color" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/shutter_words_margin"
                        android:textSize="16sp"
                        android:clickable="false"
                        android:text="@string/points"
                        android:textColor="@color/header_text_color" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
            android:id="@+id/header_listview_logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/menu_switch_user_but"/>

</LinearLayout>